postcss/testData/inspections/mediaRanges/incorrectSignDirectionWithDifferentOperators.pcss
@media (200px > height
    <error descr="Media query range operators should have the same direction"><=</error> 400px){}